A lot of changes made lol

--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -4643,10 +4643,10 @@ License - nucleoapp.com/license/
 }
 
 .logo-image {
-  width: 46px;
-  height: 46px;
+  width: 100px;
+  height: auto;
   border-radius: 50%;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-top: -6px;
 }
 
